deploy/operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: git-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      name: git-monitor
  template:
    metadata:
      labels:
        name: git-monitor
    spec:
      serviceAccountName: git-monitor
      containers:
        - name: git-monitor
          # Replace this with the built image name
          image: REPLACE_IMAGE
          command:
          - git-monitor
          imagePullPolicy: Always
