deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  type: NodePort
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: monitored_service
    monitored_service_cr: example-monitoredservice
